// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Try Pyrefly Component render sandbox correctly 1`] = `
<div>
  <div
    id="tryPyrefly-editor"
  >
    <div
      id="tryPyrefly-code-editor-container"
    >
      <div
        data-language="python"
        data-value="from typing import *

def test(x: int):
  return f"{x}"

# reveal_type will produce a type error that tells you the type Pyrefly has
# computed for the return (in this case, str)
reveal_type(test(42))
"
        id="monaco-editor"
      >
        <div>
          Monaco Editor (Path: playground.py)
        </div>
        <textarea
          id="editor-textarea"
          readonly=""
          style="width: 100%; height: 200px;"
        >
          from typing import *

def test(x: int):
  return f"{x}"

# reveal_type will produce a type error that tells you the type Pyrefly has
# computed for the return (in this case, str)
reveal_type(test(42))

        </textarea>
      </div>
      <div>
        <button
          aria-label="run Python code button"
          id="run-python-button"
        >
          <span>
            ▶️ Run
          </span>
        </button>
        <button
          aria-label="share URL button"
          id="share-url-button"
        >
          <span>
            📋 Share URL
          </span>
        </button>
        <button
          aria-label="reset to default code"
          id="reset-button"
        >
          <span>
            🔄 Reset
          </span>
        </button>
      </div>
    </div>
    <div
      id="tryPyrefly-results-container"
    >
      <div>
        <ul>
          <li>
            Errors
          </li>
          <li>
            Output
          </li>
        </ul>
      </div>
      <div>
        <pre>
          <ul>
            <li>
              No errors!
            </li>
          </ul>
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`Try Pyrefly Component renders in code snippet mode without error panel 1`] = `
<div>
  <div
    id="tryPyrefly-editor"
  >
    <div
      id="tryPyrefly-code-editor-container"
    >
      <div
        data-language="python"
        data-value="def hello(): pass"
        id="monaco-editor"
      >
        <div>
          Monaco Editor (Path: snippet.py)
        </div>
        <textarea
          id="editor-textarea"
          readonly=""
          style="width: 100%; height: 200px;"
        >
          def hello(): pass
        </textarea>
      </div>
      <div>
        <button
          aria-label="open in sandbox"
          id="open-sandbox-button"
        >
          <span>
            🧪 Open in Sandbox
          </span>
        </button>
        <button
          aria-label="copy code to clipboard"
          id="copy-code-button"
        >
          <span>
            📋 Copy
          </span>
        </button>
        <button
          aria-label="reset to default code"
          id="reset-button"
        >
          <span>
            🔄 Reset
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
